# MultiAgent_Pipeline_Temporal

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  notification_consumer.py  pyproject.toml  queues.py  test_pipeline.py  worker.py
agents/: competitor_agent.py  event_publisher.py  llm_client.py  research_agent.py  seo_agent.py  tavily_client.py  writer_agent.py
backend/: database.py  main.py  models.py  schemas.py
backend/routers/: health.py  pipelines.py
backend/services/: pipeline_service.py  temporal_service.py
docker/: Dockerfile.backend  init-db.sql
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: pipelines.js
frontend/src/components/: AgentProgress.jsx  PipelineCard.jsx  StatusBadge.jsx
frontend/src/pages/: Dashboard.jsx  PipelineDetail.jsx
workflows/: content_pipeline.py
