[project]
name = "multiagent-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.4.0",
    "asyncpg>=0.31.0",
    "tavily-python>=0.5.0",
    "fastapi>=0.137.1",
    "httpcore>=1.0.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "temporalio>=1.28.0",
    "uvicorn[standard]>=0.49.0",
]
